--- a/src/app/language/en.json
+++ b/src/app/language/en.json
@@ -516,5 +516,9 @@
 	},
 	"thriller,conspiracy,indie": "thriller,conspiracy,indie",
 	"Animation, Comedy, Fantasy": "Animation, Comedy, Fantasy",
-	"blah": "blah"
+	"blah": "blah",
+	"Documentary, History": "Documentary, History",
+	"documentary,california,economy": "documentary,california,economy",
+	"Awards": "Awards",
+	"Cool": "Cool"
 }
